@@ -22,6 +22,7 @@ Improvements:
     * Less memory used per callbacks.
     * Don't generate an annotate file if edje_cc failed.
     * Lua 5.2 support added, still works fine with 5.1.
+    * Evas now does compute Ellipsis.
 
 Fixes:
     * fix scale_set with edje containing boxes and/or tables
